--- a/styles/style.css
+++ b/styles/style.css
@@ -70,7 +70,7 @@ header h1 {
 
 .Buscador input[type="text"]::placeholder {
     display: inline;
-    color: black;
+    color: grey;
     font-style: italic;
 }
 
@@ -85,15 +85,15 @@ header h1 {
 
 .search-box {
     background-color: transparent;
-    border-style: none;
-    font-size: 18px;
-    color: black; /* Añadiendo color al texto */
+    border: 1px grey solid;
+    border-radius: 2px;
+    font-size: 15px;
     outline: none; /* Quitando el borde cuando está enfocado */
     position: relative;
 }
 
 .Buscador input[type="text"]:focus {
-    background-color: #fcc444;
+    background-color: #ffe3a1;
 }
 
 @media (max-width:449px){
@@ -188,12 +188,15 @@ nav ul li {
     margin-top: 1em;
     padding: 0%;
     position: absolute;
+    animation-name: opacity;
+    animation-duration: 1s;
 }
 
 .navbarDropOption li {
     text-align: center;
     width: 100%;
-    background-color: #5b2b19
+    background-color: #5b2b19;
+    transition: all 1s;
 }
 
 .navbarDropOption:hover > ul, .navbarDropOption ul:hover {
@@ -206,6 +209,11 @@ nav li:hover {
 
 .navbarDropOption > ul > li:hover {
     background-color: #a04928;
+}
+
+@keyframes opacity {
+   0% {opacity: 0};
+  100% {opacity: 1};
 }
 
 #hamburgerMenu {
@@ -353,8 +361,16 @@ form input[type="submit"] {
     background-color: #025255;
     color: white;
     border: 0;
-    cursor: pointer;
+    cursor: pointer;  
+    transition: all 1s;
+    border-radius: 0px 20px 20px 20px;
 }
+ 
+form input[type="submit"]:hover{
+    transform: translateY(-7px);
+}
+
+
 
 /*
 -----------------------------
@@ -544,6 +560,7 @@ ConsultarTurno
 
 .consultarturno input[type="submit"]{
     border-radius: 0%;
+    border-radius: 0px 20px 20px 20px;
 }
 
 .consultarturno p {
@@ -790,6 +807,9 @@ footer {
     border-radius: 3px;
     font-size: 13.333px;
     font-family: 'Arial';
+    border-radius: 0px 20px 20px 20px;
+    transition: all 0.5s;
+    border: solid 1px black;
 }
 
 a.btn {
@@ -797,6 +817,10 @@ a.btn {
     color: black;
     background-color: rgb(239, 239, 239);
 }
+
+.btn:hover{
+    border: solid 1px #d0244a;
+} 
 
 @media (max-width:511px){
     footer {
