--- a/styles/style.css
+++ b/styles/style.css
@@ -202,6 +202,7 @@ nav ul li {
     position: absolute;
     animation-name: opacity;
     animation-duration: 1s;
+    width: max-content;
 }
 
 .navbarDropOption li {
