--- a/styles/style.css
+++ b/styles/style.css
@@ -42,8 +42,10 @@ header {
 }
 
 .lupa[type="submit"]{
-    margin-left: 2%;
-    background-color: #eef1ef;
+    margin-left: 0px;
+    margin-bottom: 10px;
+    padding-left: 0px;
+    background-color: transparent;
 }
 
 header a {
