--- a/styles/style.css
+++ b/styles/style.css
@@ -222,6 +222,8 @@ nav ul li {
 }
 
 nav li:hover {
+    position: relative;
+    z-index: 2;
     transform: scale(1.1);
     background-color: #a04928;
 }
