fix footer modo oscuro, perdon me di cuenta recien

--- a/styles/style.css
+++ b/styles/style.css
@@ -905,6 +905,9 @@ Modo oscuro
     nav{
         background-color: #3b4a5a;
     }
+    footer{
+        background-color: #3b4a5a;
+    }
     .formulario input{
         background-color: #eef1ef;
     }
