--- a/public/assets/js/components/styles/carousel.css
+++ b/public/assets/js/components/styles/carousel.css
@@ -10,7 +10,6 @@
     /* padding: 10px; */
     mix-blend-mode: darken;
     grid-area: carrusel;
-    overflow: hidden;
 }
 
 .slide {
@@ -102,9 +101,6 @@ body, html {
     height: 100%;
 }
 
-* {
-
-}
 
 .slider img {
     width: 100%;
@@ -113,7 +109,7 @@ body, html {
 }
 
 .slider-arrow {
-    color: var(--principal-color1);
+    color: var(#fcc444);
     font-size: 55px;
     cursor: pointer;
     position: absolute;
@@ -142,15 +138,15 @@ body, html {
     border-radius: 100%;
     cursor: pointer;
     margin: 0 8px;
-    border: 2px solid var(--principal-color2);
+    border: 2px solid #black;
 }
 
 .dot-nav:hover {
-    background-color: var(--secondary-color2);
+    background-color: #a04928;
 }
 
 .active-dot {
-    background-color: var(--principal-color1);
+    background-color: #fcc444;
 }
 
 
