--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -741,6 +741,10 @@ SolicitarTurno
 .form-buttons {
     text-align: right;
 }
+#preview > img {
+    max-width: 200px;
+    max-height: 200px;
+  }
 
 /*
 .form-buttons input[type="submit"], .form-buttons input[type="reset"] {
