--- a/public/assets/js/components/styles/carousel.css
+++ b/public/assets/js/components/styles/carousel.css
@@ -1,15 +1,13 @@
 .container {
     width: 100%;
-    height: 50vh;
+    height: 100%;
     overflow: hidden;
     position: relative;
-    /* top: 10px; */
-    /* left: 50%; */
-    /* transform: translateX(-50%); */
     cursor: pointer;
-    /* padding: 10px; */
+    padding: 5px;
     mix-blend-mode: darken;
     grid-area: carrusel;
+    margin-bottom: 9.5vh;
 }
 
 .slide {
@@ -18,33 +16,10 @@
     display: flex;
 }
 
-
-.fade {
-    animation-name: fade;
-    animation-duration: 1.8s;
-}
-
 .foolishIn {
     animation-name: foolishIn;
     animation-duration: 1.8s;
 }
-
-
-.slidein {
-    animation-name: slidein;
-    animation-duration: .8s;
-}
-
-.fadeIn {
-    animation-name: fadeIn;
-    animation-duration: 1.8s;
-}
-
-.swashIn {
-    animation-name: swashIn;
-    animation-duration: 1.8s;
-}
-
 
 .moveRight {
     animation-name: moveRight;
@@ -53,26 +28,21 @@
 
 
 .slide .box {
-    min-width: 260px;
-    height: 100%;
+    height: 50vh;
     overflow: hidden;
-    position: relative;
+    width: 50vh;
 }
 
 .box img {
-    width: 100vw;
-    height: 100%;
+    justify-content: center;
     display: block;
     object-fit: cover;
+    position: absolute;
+    height: 50vh;
+    width: 50vh;
 }
 
-* {
-    box-sizing: border-box;
-    margin: 0;
-    padding: 0;
-    scroll-behavior: smooth;
-    /*user-select: none;*/
-}
+
 
 .slider-arrow {
     color: var(--principal-color2);
@@ -92,16 +62,6 @@
     left: 50%;
     transform: translateX(-50%);
 }
-
-/*style slider*/
-
-
-body, html {
-    width: 100%;
-    height: 100%;
-}
-
-
 .slider img {
     width: 100%;
     height: 100%;
@@ -109,7 +69,7 @@ body, html {
 }
 
 .slider-arrow {
-    color: var(#fcc444);
+    color: #d0244a;
     font-size: 55px;
     cursor: pointer;
     position: absolute;
@@ -138,7 +98,7 @@ body, html {
     border-radius: 100%;
     cursor: pointer;
     margin: 0 8px;
-    border: 2px solid #black;
+    border: none;
 }
 
 .dot-nav:hover {
@@ -156,11 +116,12 @@ body, html {
     top: 0;
     width: 100vw;
     height: 1vh;
+    text-decoration: none;
 
 }
 
 .progressBar {
-    background-color: #f1f1f1;
+    background-color: #f71818;
 }
 
 
@@ -171,81 +132,12 @@ body, html {
     background-color: #f44336;
 }
 
-
-@keyframes fade {
-    from {
-        opacity: .6
-    }
-    to {
-        opacity: 1
-    }
-}
-
-
-@keyframes slidein {
-    from {
-        margin-left: 50%;
-        width: 300%;
-    }
-
-    to {
-        margin-left: 0%;
-        width: 100%;
-    }
-}
-
-
-@-webkit-keyframes swashIn {
-    0% {
-        opacity: 0;
-        -webkit-transform-origin: 50% 50%;
-        -webkit-transform: scale(0, 0);
-    }
-    90% {
-        opacity: 1;
-        -webkit-transform-origin: 50% 50%;
-        -webkit-transform: scale(0.9, 0.9);
-    }
-    100% {
-        opacity: 1;
-        -webkit-transform-origin: 50% 50%;
-        -webkit-transform: scale(1, 1);
-    }
-}
-
-@keyframes swashIn {
-    0% {
-        opacity: 0;
-        transform-origin: 50% 50%;
-        transform: scale(0, 0);
-    }
-    90% {
-        opacity: 1;
-        transform-origin: 50% 50%;
-        transform: scale(0.9, 0.9);
-    }
-    100% {
-        opacity: 1;
-        transform-origin: 50% 50%;
-        transform: scale(1, 1);
-    }
-}
-
-@keyframes fadeIn {
-    from {
-        opacity: 0;
-    }
-    to {
-        opacity: 1;
-    }
-}
-
 @keyframes moveRight {
     from {
         transform: translateX(0);
     }
     to {
-        transform: translateX(100px);
+        transform: translateX(50px);
     }
 }
 
@@ -282,3 +174,18 @@ body, html {
         transform: scale(1, 1) rotate(0deg);
     }
 }
+@media (prefers-color-scheme: dark) {
+    .container {
+        width: 100%;
+        height: 100%;
+        overflow: hidden;
+        position: relative;
+        /* top: 10px; */
+        /* left: 50%; */
+        /* transform: translateX(-50%); */
+        cursor: pointer;
+        padding: 5px;
+        mix-blend-mode: difference;
+        grid-area: carrusel;
+    }
+ }
