--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -753,7 +753,12 @@ SolicitarTurno
   #dropzone.dragover {
     border: dashed 4px black;
   }
-/*
+  .preview-img:hover{
+    filter:sepia(100%);
+  }
+ 
+
+  /*
 .form-buttons input[type="submit"], .form-buttons input[type="reset"] {
     display: inline;
     border-radius: 0;
