--- a/public/assets/js/components/styles/carousel.css
+++ b/public/assets/js/components/styles/carousel.css
@@ -171,7 +171,7 @@
 }
 
 @media (prefers-color-scheme: dark) {
-    .container {
+    .slide-container {
         width: 100%;
         height: 100%;
         overflow: hidden;
@@ -181,7 +181,7 @@
         /* transform: translateX(-50%); */
         cursor: pointer;
         padding: 5px;
-        mix-blend-mode: difference;
+        mix-blend-mode:difference;
         grid-area: carrusel;
     }
  }
