--- a/public/assets/js/components/styles/carousel.css
+++ b/public/assets/js/components/styles/carousel.css
@@ -11,6 +11,11 @@
     text-align: center;
 }
 
+.fade {
+    animation-name: fade;
+    animation-duration: 1.8s;
+}
+
 .foolishIn {
     animation-name: foolishIn;
     animation-duration: 1.8s;
@@ -126,6 +131,15 @@
     --ancho: 0;
     width: var(--ancho);
     background-color: #f44336;
+}
+
+@keyframes fade {
+    from {
+        opacity: .6
+    }
+    to {
+        opacity: 1
+    }
 }
 
 @keyframes moveRight {
