--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -10,6 +10,12 @@
     --second-light-green: #718839;
     --second-grey: #3b4a5a;
     --second-light-grey: #eef1ef;
+
+    --font-family: 'gotham','sans-serif';
+}
+
+html {
+    min-height: 100vh;
 }
 
 * {
@@ -17,10 +23,13 @@
 }
 
 body {
+    min-height: 100vh;
     width: 100%;
     margin: 0%;
     background-color: #eef1ef;
-    font-family: 'Gotham'
+    font-family: 'Gotham';
+    display:grid;
+    grid-template-rows: min-content min-content auto min-content;
 }
 
 /*
@@ -68,7 +77,7 @@ header a {
     background-image: url("../img/Imagotipo_PAW_Hospitals.svg");
     display: inline-block;
     aspect-ratio: 2.25;
-    width: 250px;
+    height: 120px;
     background-size: 100%;
     background-repeat: no-repeat;
 }
@@ -1163,3 +1172,58 @@ main.sala-espera > ul > li:nth-child(4) {
     background-color: var(--primary-red);
     font-weight: bolder;
 }
+
+main.atender-turnos button {
+        font-family: var(--font-family);
+      }
+
+      main.atender-turnos li {
+        list-style: none;
+      }
+
+      main.atender-turnos > ul > li > ul {
+        border: solid 1px;
+        border-radius: 5px;
+        margin: 0.5em 0;
+        padding: 0;
+        background-color: var(--second-light-blue);
+      }
+
+      main.atender-turnos > ul > li > ul > li {
+        display: inline-block;
+        margin: 0.5em;
+      }
+
+      main.atender-turnos > ul > li > ul > li:first-child {
+        width: 5ch;
+      }
+
+      main.atender-turnos > ul > li > ul > li:nth-child(2) {
+        width: calc(100% - 15ch - 3em);
+        text-align: left;
+      }
+
+      main.atender-turnos > ul > li > ul > li:nth-child(3) {
+        width: 10ch;
+        /*font-size: x-large;*/
+        text-align: center;
+      }
+
+      main.atender-turnos > ul > li:first-child > ul {
+        background-color: var(--primary-yellow);
+        font-size: xx-large;
+      }
+
+      main.atender-turnos .finalizar {
+        font-size: x-large;
+        border: outset;
+        background-color: var(--second-light-grey);
+      }
+
+      main.atender-turnos .finalizar:hover {
+        cursor: pointer;
+      }
+
+      main.atender-turnos .finalizar:active {
+        border: inset;
+      }
